--- a/MVCOnlineTicariOtomasyon/Views/Shared/_Layout.cshtml
+++ b/MVCOnlineTicariOtomasyon/Views/Shared/_Layout.cshtml
@@ -34,9 +34,8 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/Scripts/jquery-3.7.0.min.js")
+    @Scripts.Render("~/Scripts/bootstrap.js")
     @RenderSection("scripts", required: false)
 </body>
 </html>
